<resources>
    <string name="app_name">NIKKI</string>
    <string name="login">登陆</string>
    <string name="user_name">用户名(唯一，例：神崎日照)</string>
    <string name="passwprd">密码</string>
    <string name="other_login">第三方登陆</string>
    <string name="re_password">记住密码</string>
    <string name="regeist">注册</string>
    <string name="todo">TODO</string>
    <string name="menu">侧边栏</string>
    <string name="new_register">注册页面</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
