<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/flanders"
    android:id="@+id/main"
    tools:context=".MainActivity">
<!--    <ImageView-->
<!--        android:id="@+id/imageView2"-->
<!--        android:layout_width="180dp"-->
<!--        android:layout_height="180dp"-->
<!--        android:layout_marginStart="110dp"-->
<!--        android:layout_marginLeft="110dp"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:contentDescription="@string/todo"-->
<!--        app:srcCompat="@drawable/img_1" />-->
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/login_back"
        android:src="@drawable/back"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="-40dp"
        android:text="登陆"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#0C0C0C"/>
    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="185dp"
        android:hint="@string/user_name"
        android:inputType="text"
        android:textColor="#66ffcc" />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="35dp"
        android:hint="@string/passwprd"
        android:inputType="textPassword"
        android:textColor="#66ffcc" />
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/re_password"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="85dp"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="30dp"
            android:alpha="0.5"
            android:text="@string/login" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_marginTop="-50dp"
            android:layout_height="50dp"
            android:text="@string/regeist"
            android:alpha="0.5"
            android:layout_gravity="right"
            android:layout_marginRight="85dp"/>

    <Button
        android:id="@+id/other_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginRight="85dp"
        android:alpha="0.5"
        android:text="@string/other_login" />

</LinearLayout>